more! but still in process

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="message-area">
-      <p>
+      <p id="message">
         Zatopiony!
       </p>
     </div>
@@ -183,8 +183,8 @@
 
 
           <label>Współrzędne strzału</label>
-          <input type="text" placeholder="np. A0" />
-          <input type="button"  value="Ognia!"/>
+          <input  id="coordinates" type="text" placeholder="np. A0" />
+          <input id="fire-btn" type="button"  value="Ognia!"/>
 
 
       </form>
